--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -11,7 +11,7 @@ email: "jpacora3@gatech.edu"
 cv_link: https://drive.google.com/file/d/1fALVto5Fb7tFTA3oRAJWIoZwppxQdlrC/view?usp=sharing
 res_link: https://drive.google.com/file/d/1FvU1xdj95c94G28DN1x2uaGllGgia_sA/view?usp=sharing
 gscholar: IWbpiO8AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: Jorge-Quesada
+#github: Jorge-Quesada
 #twitter: your_twitter_id  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
